# antlr4-python-grun

./: .gitignore  LICENSE  README.rst  flake.nix  pyproject.toml  test.sh
antlr4_grun/: __init__.py  cli.py  lib.py  main.py  util.py
tests/: test_cli.py  test_lib.py  test_main.py
tests/sample/: JSON.g4  source.json
